--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,12 @@
 baseURL = "http://example.org/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Pulsar"
+
+theme = "pulsar"
+
+[menu]
+
+    [[menu.main]]
+    name = "Home"
+    url = "/"
+    weight= 1
