--- a/config.toml
+++ b/config.toml
@@ -10,3 +10,13 @@ theme = "pulsar"
     name = "Home"
     url = "/"
     weight= 1
+
+     [[menu.main]]
+    name = "Projects"
+    url = "/projects"
+    weight= 2
+
+     [[menu.main]]
+    name = "Contact"
+    url = "/contact"
+    weight= 3
